[package]
name = "module"
version = "0.1.0"
authors = ["johalun <johalun0@gmail.com>"]

[lib]
crate-type = ["staticlib"]


[dependencies]
# rlibc = "*"
spin = "*"
lazy_static = { features = ["spin_no_std"], version="0.2.2" }
std = { path = "crates/freebsd_kernel_std" }



# Needed for custom _Unwind_Resume
# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
